[gd_scene load_steps=22 format=3 uid="uid://b1ofytttyyhcd"]

[ext_resource type="PackedScene" uid="uid://dtybly2niound" path="res://src/UI/CharacterSheetSubpages/Summary/Summary.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://df23fkwkm27pi" path="res://src/UI/CharacterSheetSubpages/TransactionLog/Transaction Logs.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dbohtweyrnu50" path="res://src/UI/CharacterSheetSubpages/Journal/Journal.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cs45ofvipag6x" path="res://src/UI/CharacterSheetSubpages/Cheatsheets/Cheatsheets.tscn" id="4"]
[ext_resource type="Script" path="res://src/UI/CharacterSheet.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://cnjcq6f6fw47u" path="res://src/UI/CharacterSheetSubpages/Inventory/Inventory.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://cvaqt1x1atw1s" path="res://src/UI/CharacterSheetSubpages/ProficienciesAndFeats/Proficiencies and Feats.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://v65soahapwpa" path="res://src/UI/CharacterSheetSubpages/QuestLog/quest_log.tscn" id="7_y8eqb"]
[ext_resource type="PackedScene" uid="uid://bm2qgaji5d7g7" path="res://src/UI/CharacterSheetSubpages/Spellbook/Spellbook.tscn" id="8"]
[ext_resource type="Theme" path="res://src/UI/Theme.tres" id="9"]
[ext_resource type="PackedScene" uid="uid://dm1xupxrm5lyw" path="res://src/UI/CharacterSheetSubpages/CharacterDevelopment/Character Development.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://8ney6eev55hk" path="res://src/UI/CharacterSheetSubpages/MiscScratchEntries/Misc Scratch Entries.tscn" id="11"]
[ext_resource type="PackedScene" path="res://src/UI/Popups/ConfirmationDialog.tscn" id="12"]
[ext_resource type="Script" path="res://src/UI/ScratchText.gd" id="13"]
[ext_resource type="Script" path="res://src/UI/ScratchWindow.gd" id="14"]
[ext_resource type="PackedScene" uid="uid://g5op4hb3bppr" path="res://src/UI/Popups/OptionDialogue.tscn" id="15"]

[sub_resource type="Theme" id="2"]
TextEdit/colors/font_color_readonly = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="1"]
TabContainer/fonts/font = null

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="4"]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.109804), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fvldc"]
_data = {
"RESET": SubResource("3"),
"flash": SubResource("4")
}

[node name="CharacterSheet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("2")
script = ExtResource("5")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("1")
current_tab = 0

[node name="Summary" parent="TabContainer" groups=["Persist"] instance=ExtResource("1")]
layout_mode = 2
metadata/_tab_index = 0

[node name="Spellbook" parent="TabContainer" instance=ExtResource("8")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Inventory" parent="TabContainer" groups=["Persist"] instance=ExtResource("6")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Feats" parent="TabContainer" instance=ExtResource("7")]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Journal" parent="TabContainer" instance=ExtResource("3")]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="QuestLog" parent="TabContainer" instance=ExtResource("7_y8eqb")]
visible = false
layout_mode = 2

[node name="Transaction Logs" parent="TabContainer" groups=["Persist"] instance=ExtResource("2")]
visible = false
layout_mode = 2
theme = ExtResource("9")
metadata/_tab_index = 6

[node name="Cheatsheets" parent="TabContainer" instance=ExtResource("4")]
visible = false
layout_mode = 2
metadata/_tab_index = 7

[node name="Character Development" parent="TabContainer" instance=ExtResource("10")]
visible = false
layout_mode = 2
metadata/_tab_index = 8

[node name="Misc Scratch Entries" parent="TabContainer" instance=ExtResource("11")]
visible = false
layout_mode = 2
metadata/_tab_index = 9

[node name="SaveFile" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(914, 800)
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.json")

[node name="LoadFile" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(914, 800)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="ConfirmationDialog" parent="." instance=ExtResource("12")]
handle_input_locally = false
initial_position = 2
visible = false

[node name="OptionDialogue" parent="." instance=ExtResource("15")]
title = "Options"
initial_position = 1
visible = false

[node name="ScratchWindow" type="Window" parent="."]
handle_input_locally = false
title = "Scratch Window"
position = Vector2i(1200, 400)
size = Vector2i(600, 600)
visible = false
script = ExtResource("14")

[node name="ScratchText" type="TextEdit" parent="ScratchWindow" groups=["Persist"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
wrap_mode = 1
script = ExtResource("13")

[node name="SaveFlash" type="ColorRect" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="SaveFlash"]
libraries = {
"": SubResource("AnimationLibrary_fvldc")
}
autoplay = "RESET"

[connection signal="file_selected" from="SaveFile" to="." method="_on_SaveFile_file_selected"]
[connection signal="file_selected" from="LoadFile" to="." method="_on_LoadFile_file_selected"]
[connection signal="close_requested" from="OptionDialogue" to="OptionDialogue" method="_on_close_requested"]
[connection signal="close_requested" from="ScratchWindow" to="ScratchWindow" method="_on_close_requested"]
